fixed ui break at sidebar and cart page

--- a/src/pages/CartPage/CartPage.css
+++ b/src/pages/CartPage/CartPage.css
@@ -248,7 +248,7 @@
   }
   .CartMenuItemVariantContainer,
   .cartMenuItemName {
-    width: 22rem;
+    width: auto;
   }
 }
 @media (width <= 395px) {
