--- a/src/pages/MenuItemListPage/Component/MenuItemListWithFilters/Component/FilterStack/FilterStack.css
+++ b/src/pages/MenuItemListPage/Component/MenuItemListWithFilters/Component/FilterStack/FilterStack.css
@@ -72,7 +72,7 @@
 }
 @media (max-width: 798px) {
   .FilterContainer {
-    transform: translateX(100%);
+    transform: translateX(200%);
     background-color: white;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
